# rtop

./: .gitignore  CHANGELOG.md  COMPLETED.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
src/: app.rs  consts.rs  format.rs  main.rs  persist.rs  process.rs  sampler.rs  search.rs  signal.rs  source.rs  tree.rs  ui.rs
src/app/: event.rs  state.rs
src/search/: compiled.rs  filter.rs  parser.rs
src/source/: linux.rs  macos.rs
src/ui/: help_modal.rs  load_view.rs  search_box.rs  signal_modal.rs  status_line.rs  tree_view.rs
