[package]
name = "rtop"
version = "0.1.3"
edition = "2024"
description = "A TUI process monitor with vim-style navigation, substring search, and a process tree view."
repository = "https://github.com/wbbradley/rtop"
license = "MIT"
readme = "README.md"
keywords = ["tui", "top", "htop", "process", "monitor"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
nix = { version = "0.31.2", features = ["signal", "process"] }
ratatui = "0.30.0"
uzers = "0.12.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
libproc = "0.14.11"
mach2 = "0.6.0"
